--- a/src/.env
+++ b/src/.env
@@ -1,2 +1,2 @@
-REACT_APP_API_KEY=${{ secrets.AZURE_API_KEY }}
-REACT_APP_AZURE_ENDPOINT=${{ secrets.AZURE_API_ENDPOINT }}
+REACT_APP_API_KEY=${{ secrets.REACT_APP_API_KEY}}
+REACT_APP_AZURE_ENDPOINT=${{secrets.REACT_APP_AZURE_ENDPOINT }}
